# cdgmaker

./: .gitignore  README.md  __main__.py  cdg.py  config.py  lrc-to-cdg.py  pack.py  pyproject.toml  render.py  requirements.txt
src/cdgmaker/: __init__.py  cdg.py  composer.py  lrc_to_cdg.py
