[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cdgmaker"
version = "0.1.0"
authors = [
  { name="Josiah Winslow", email="winslowjosiah@gmail.com" },
]
description = "A tool for creating CDG (CD+G) karaoke files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs==24.2.0",
    "cattrs==24.1.2",
    "Pillow==10.4.0",
    "pydub==0.25.1",
]

[project.urls]
"Homepage" = "https://github.com/WinslowJosiah/cdgmaker"
"Bug Tracker" = "https://github.com/WinslowJosiah/cdgmaker/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cdgmaker = ["fonts/*", "images/*", "transitions/*"]

[project.scripts]
cdgmaker = "cdgmaker.composer:main"
